# dev-boards

./: .editorconfig  .geminiignore  .gitattributes  .gitignore  .python-version  .secrets  .sync-manifest  3d-tuning-router.skill  AGENTS.md  GEMINI.md  Optimization - dev-console.md  Optimization - split_diff_view.rs.md  README-UV.md  README.md  _____dynamicons-dev.vsix  bambu-tuning-pro.skill  dxdiag_output.txt  fix-vga-display.ps1  fix-vga-refresh-rate.ps1  git-sparse-checkout-setup.md  printer_cert.pem  pyproject.toml  pyrightconfig.json  send-clone-script.py  setup-sparse-checkout.ps1  setup-ws1.ps1  setup-ws2.ps1  sync-sparse-checkout.ps1  test-header-colors  test-terminal-output  test_meta.js  zxczxczxc.py
.cursor/: .secrets  Python-Package-Best-Practices.md  settings.json
.dev-console/: progress_history.json
.gemini/: settings.json
3d-tuning-router/: SKILL.md
Arduino/: README.md  arduino-cli.yaml.example  setup-arduino-cli.ps1
___shared/: rule-shared-repo-plan.md
_docs/: SDD-Waterfall-and-Lessons.md
_projects/indeneder/: example.py  pyproject.toml
_projects/indeneder/indeneder/: __init__.py  terminal.py
_projects/pyprompt/: example_integration.py  pyproject.toml
_projects/pyprompt/pyprompt/: __init__.py  prompts.py
_scripts/: ansii-color-chart.js  file_tree.py
bootstraps/git_py/: INSTALL.md  README.md  git-py  git-py.bat  main.py  pyproject.toml  setup.ps1
bootstraps/git_py/commands/: __init__.py  auth.py  auth_steps.py  init.py
bootstraps/git_py/core/: __init__.py  checks.py  prompts.py  terminal.py
bootstraps/git_py/operations/: repository.py
lib/py_makefile/: __init__.py  __main__.py  bootstrap.py  cli.py  exceptions.py  install  install.py  pyproject.toml  uninstall  uninstall.py
lib/py_makefile/cache/: __init__.py  cache.py
lib/py_makefile/config/: __init__.py  config.py  paths.py
lib/py_makefile/core/: __init__.py  cli.py
lib/py_makefile/ui/: __init__.py  interface.py
lib/py_makefile/upload/: __init__.py  uploader.py
projects/dev-console/: ADVANCED_PROGRESS_TRACKING.md  CODEBASE_ANALYSIS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_MODULES.md  Optimization - dev-console.md  README.md  REFACTORING_SUMMARY.md  build_errors.txt  config.yaml
projects/dev-console/.agent/rules/rust/: infrastructure-standards.md  project-directives.md
projects/dev-console/docs/: README.md  configuration.md  development.md
projects/dev-console/docs/api/: README.md
projects/dev-console/docs/examples/: README.md
projects/dev-console/docs/guides/: hwnd-system.md  keybindings.md  settings-storage.md
projects/dev-console/src/: app_state.rs  command_helper.rs  config.rs  config_validation.rs  constants.rs  dashboard.rs  dashboard_batch.rs  error_format.rs  event_handler.rs  field_editor.rs  layout_cache.rs  layout_manager.rs  layout_utils.rs  main.rs  process_manager.rs  profile_manager.rs  profile_state.rs  progress_history.rs  progress_tracker.rs  settings.rs  settings_manager.rs  string_intern.rs  tool_detector.rs  ui_coordinator.rs
projects/dev-console/src/commands/: compile_state.rs  executor.rs  mod.rs  monitor_mqtt.rs  monitor_serial.rs  pmake.rs  process_handler.rs  progress.rs  progress_rust.rs  upload.rs  utils.rs
projects/dev-console/src/render/: content.rs  dashboard.rs  mod.rs  settings.rs  settings2_standalone.rs
projects/dev-console2/: Cargo.toml  GEMINI.md  README.md  build-config.yaml  config.yaml  coverage.lcov  test_config.yaml
projects/dev-console2/.dev-console/: progress_history.json
projects/dev-console2/_docs/: 2026-02-02-dropdown-visual-spec.md  2026-02-02-system-restructure-plan.md  Audit.md  general_notes.md
projects/dev-console2/_docs/mockups/: dropdown.html  file_browser.html  index.html
projects/dev-console2/_docs/spec-flow/: NOTES.md  checklists_requirements.md  mockup-approval-checklist.md  plan.md  spec.md  tasks.md
projects/dev-console2/specs/: elm-architecture-spec.md  implementation-guide.md  ui-layout-spec.md
projects/dev-console2/src/: app.rs  config.rs  main.rs  terminal.rs
projects/dev-console2/src/app/: ansi.rs  executors.rs  mod.rs  system.rs  tests.rs  theme.rs  view.rs
projects/dev-console2/src/commands/: compile.rs  compile_parser.rs  compile_state.rs  discovery.rs  history.rs  mod.rs  mqtt.rs  path_utils.rs  predictor.rs  process.rs  serial.rs  serial_v2.rs  tests.rs  traits.rs  upload.rs  utils.rs
projects/dev-console2/src/widgets/: command_list.rs  dimmer.rs  file_browser.rs  mod.rs  output_box.rs  popup.rs  progress_bar.rs  selection_list.rs  smooth_scrollbar.rs  status_box.rs  tab_bar.rs  toast.rs  widget-config.yaml
projects/dev-console2/src/widgets/_removed/orrig_tab_bar/: tab_bar.rs  tab_bar_README.md  tab_bar_styles.md
projects/dev-console2/src/widgets/components/: mod.rs
projects/dev-console2/src/widgets/components/button_bar/: button_bar.rs  config.yaml  mod.rs  tests.rs
projects/dev-console2/src/widgets/components/tabbed_bar/: config.yaml  mod.rs  tabbed_bar.rs  tests.rs
projects/dev-console3/: Cargo.toml
projects/dev-console3/_docs/: plan.md  spec.md  tasks.md
projects/dev-console3/src/: main.rs  terminal.rs
projects/dev-console3/src/app/: mod.rs
projects/dev-console3/src/config/: hardware.rs  mod.rs  profiles.rs  ui.rs
projects/dev-console3/src/views/: mod.rs
projects/dev-console3/src/views/dashboard/: mod.rs  state.rs  tests.rs  view.rs
projects/dev-console3/src/views/profiles/: mod.rs  state.rs  view.rs
projects/dev-console3/src/widgets/: macros.rs  manager.rs  mod.rs  traits.rs
projects/dev-console3/src/widgets/components/: mod.rs
projects/dev-console3/src/widgets/components/button_bar/: config.yaml  mod.rs  state.rs  view.rs
projects/dev-console3/src/widgets/components/dropdown/: mod.rs  state.rs  tests.rs  view.rs
projects/dev-console3/src/widgets/components/tabbed_bar/: config.yaml  mod.rs  state.rs  view.rs
projects/dev-console3/src/widgets/components/toast/: config.yaml  mod.rs  state.rs  view.rs
projects/dev-console3/src/widgets/elements/: dimmer.rs  mod.rs  selection_list.rs  status_bar.rs  title_bar.rs
(+484 files in other folders)
