[project]
name = "dev-boards-workspace"
version = "0.1.0"
description = "Dev-boards workspace with shared dependencies"
requires-python = ">=3.8"
dependencies = [
    # Workspace members installed as editable packages
    "outerm",
    "pyprompt",
    "py-makefile",
]

[tool.uv] #>
# Cache is on D: drive (D:\_dev\.AppData\uv\cache) via UV_CACHE_DIR environment variable
# Tools are on D: drive (D:\_dev\.AppData\uv\tools) via UV_TOOLS_DIR environment variable
# link-mode = "hardlink"  # Default when cache and venv are on same filesystem

#<---------------------------------------------------------------------------------------

[tool.uv.sources] #>
outerm = { path = "___shared/shared-python/outerm", editable = true }
pyprompt = { path = "___shared/shared-python/pyprompt", editable = true }
py-makefile = { path = "lib/py_makefile", editable = true }

#<---------------------------------------------------------------------------------------------------------
[tool.basedpyright] #>

typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false

venvPath = ".venv"

exclude = [ #> prevents initial scanning
    "**/_removed/**",
    "**/__removed/**",
    "**/__removed/pmake/build.py",
    # "**/locate-package",  # Exclude extensionless locate-package file (deleted, but Pyright may still track it)
    "reference/**",
    "esp-idf/**",
    "**/.venv/**",
    "**/site-packages/**",       # Python site-packages directories
    "**/Lib/site-packages/**",  # Windows site-packages (Lib/site-packages)
    "**/lib/python*/site-packages/**",  # Unix site-packages
    "**/site-packages/_pytest/**",  # Explicitly exclude _pytest from site-packages
    "**/___shared/.sync-manager/**",
    
] #<
ignore = [ #> ignore prevents type checking imported files
    "**/_removed/**",
    "**/__removed/**",
    "**/__removed/pmake/build.py",
    "reference/**",
    "esp-idf/**",
    "**/.venv/**",
    "**/site-packages/**",
    "**/Lib/site-packages/**",
    "**/lib/python*/site-packages/**",
    "**/site-packages/_pytest/**",  # Explicitly ignore _pytest
    
] #<

#<---------------------------------------------------------------------------------------------------------
[[tool.basedpyright.executionEnvironments]] #> Includes all workspace member packages (editable installs)
pythonVersion = "3.11"
root = "."
extraPaths = [ #> extraPaths point to directories containing the packages (parent dirs)
    "lib",
    "___shared/shared-python",
] #<

#<---------------------------------------------------------------------------------------------------------





# [tool.uv.workspace] #> Workspace member directories (must match package names in [tool.uv.sources])
# members = [
#     "___shared/shared-python/outerm",    # → package: "outerm"
#     "___shared/shared-python/pyprompt",   # → package: "pyprompt"
#     "lib/py_makefile",                    # → package: "py-makefile"
# ]
# #<--------------------------------------------------------------------------------------------------
# [tool.uv.sources] #> Map package names to workspace sources (must match [tool.uv.workspace].members)
# outerm = { workspace = true }
# pyprompt = { workspace = true }
# py-makefile = { workspace = true }

# #<---------------------------------------------------------------------------------------------------

