[project]
name = "dev-boards-workspace"
version = "0.1.0"
description = "Dev-boards workspace with shared dependencies"
requires-python = ">=3.8"
dependencies = [
    # Workspace members installed as editable packages
    "outerm",
    "pyprompt",
]

[tool.uv] #>
# Cache is on D: drive (D:\_dev\.AppData\uv\cache) via UV_CACHE_DIR environment variable
# Tools are on D: drive (D:\_dev\.AppData\uv\tools) via UV_TOOLS_DIR environment variable
# link-mode = "hardlink"  # Default when cache and venv are on same filesystem

#<---------------------------------------------------------------------------------------

[tool.uv.workspace]
# No workspace members - packages are configured via [tool.uv.sources] instead
# This prevents automatic discovery and building of nested projects like .sync-manager

[project.optional-dependencies]
dev = [
    "sphinx>=7.0",
    "python-docs-theme>=2024.1",
    "sphinx-autodoc-typehints>=1.24",
]

[tool.uv.sources] #>
outerm = { path = "_shared-resources/shared-python/outerm", editable = true }
pyprompt = { path = "_shared-resources/shared-python/pyprompt", editable = true }


#<---------------------------------------------------------------------------------------------------------







# Moved to json config
# [tool.basedpyright] #>

# typeCheckingMode = "basic"
# reportMissingImports = false
# reportMissingModuleSource = "information"
# reportMissingTypeStubs = false


# These settings are discouraged in basedpyright.
# https://docs.basedpyright.com/latest/benefits-over-pyright/better-defaults/#default-value-for-pythonpath
# venv = "" 
# venvPath = ""

# exclude = [ #> prevents initial scanning
#     "reference/**",
#     "esp-idf/**",
#     "**/site-packages/**",
#     "**/*removed/**",
    
#     # Exclude sync-manager from workspace scanning - it has its own pyrightconfig.json
#     # When files in this directory are opened, basedpyright will discover the nested config
#     "**/_shared-resources/**",
    
# ] #<
# ignore = [ #> ignore prevents type checking imported files
#     "reference/**",
#     "esp-idf/**",
#     "**/site-packages/**",
#     "**/*removed/**",
    
#     # Ignore sync-manager from workspace type checking - it uses its own pyrightconfig.json
#     # When files in this directory are opened, basedpyright will discover the nested config
#     "**/_shared-resources/**",
    
# ] #<

#<---------------------------------------------------------------------------------------------------------
# [[tool.basedpyright.executionEnvironments]] #> Includes all workspace member packages (editable installs)
# pythonVersion = "3.11"
# root = "."
# extraPaths = [ # extraPaths point to directories containing the packages (parent dirs)
#     "lib",
#     "_shared-resources/shared-python",
# ]

#<---------------------------------------------------------------------------------------------------------



