[project]
name = "pyprompt"
version = "1.0.0"
description = "Beautiful interactive prompts using prompt_toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt-toolkit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyprompt"]

