[project]
name = "git-py"
version = "1.0.0"
description = "GitHub repository bootstrapper - orchestrates GitHub repository initialization and management"
requires-python = ">=3.8"
dependencies = [
    # Workspace dependencies are inherited automatically
    # Add project-specific dependencies here if needed
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["git_py"]

[tool.uv]
# This project inherits dependencies from the workspace root
# Add project-specific dev dependencies here if needed
# dependency-groups = { dev = ["package"] }

