[project]
name = "git-py"
version = "1.0.0"
description = "GitHub repository bootstrapper - orchestrates GitHub repository initialization and management"
requires-python = ">=3.8"
dependencies = [
    # Workspace dependencies are inherited automatically
    # Add project-specific dependencies here if needed
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling will auto-discover packages in the directory containing pyproject.toml
# Since pyproject.toml is in bootstraps/git_py/ and that's where __init__.py is,
# hatchling will correctly package it as 'git_py'
[tool.hatch.build.targets.wheel]
packages = ["git_py"]

[tool.uv]
# This project inherits dependencies from the workspace root
# Add project-specific dev dependencies here if needed
# dependency-groups = { dev = ["package"] }

