[package]
name = "dev-console-v2"
version = "0.1.0"
edition = "2021"
authors = ["Dev Boards Team"]
description = "A TUI application for development console management using Elm architecture"
license = "MIT"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
pretty_assertions = "1.4.1"

[[bin]]
name = "dev-console-v2"
path = "src/main.rs"
