[package]
name = "dev-console-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28.1"
color-eyre = "0.6"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.16"
arboard = "3.2.0"
regex = "1.10"
lazy_static = "1.4"
which = "6.0"
serialport = "4.3"
rumqttc = { version = "0.24", default-features = false, features = ["use-native-tls"] }
tui-input = "0.11"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
