[package]
name = "dev-console3"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0.16"
color-eyre = "0.6"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1.0", features = ["full"] }
itertools = "0.12"